syntax = "proto3";

import "validate/validate.proto";
import "google/protobuf/timestamp.proto";

package plato;

option go_package = "github.com/cynxees/janus-gateway/api/proto/src/core;core";

message BaseRequest {
  string request_id = 1 [(validate.rules).string = {min_len: 1, max_len: 100}];
  string request_origin = 2 [(validate.rules).string = {min_len: 1, max_len: 100}];
  string request_path = 3 [(validate.rules).string = {min_len: 1, max_len: 100}];
  google.protobuf.Timestamp timestamp = 4;

  optional uint64 user_id = 5;
  optional string username = 6;
}

message BaseResponse {
  string code = 1;
  string desc = 2;
}

message GenericRequest {
  BaseRequest base = 1 [(validate.rules).message.required = true];
}

message GenericResponse {
  BaseResponse base = 1 [(validate.rules).message.required = true];
}
