syntax = "proto3";

import "core.proto";
import "plato/generic.proto";
import "plato/object.proto";
import "buf/validate/validate.proto";

package plato;

option go_package = "plato/api/proto";

service PlatoTopicService {
  rpc InsertTopic(InsertTopicRequest) returns (TopicResponse) {}
  rpc UpdateTopic(UpdateTopicRequest) returns (TopicResponse) {}
  rpc DeleteTopic(TopicIdRequest) returns (core.GenericResponse) {}
  rpc ListTopicsByUserId(core.GenericRequest) returns (PaginateTopicResponse) {}

  rpc PaginateTopic(PaginateRequest) returns (PaginateTopicResponse) {} // Public
  rpc GetTopicById(TopicIdRequest) returns (TopicResponse) {} // Public
  rpc GetTopicBySlug(SlugRequest) returns (TopicResponse) {} // Player Entrypoint
}

message PaginateTopicResponse {
  core.BaseResponse   base = 1;
  repeated Topic topics = 2;
}

message TopicResponse {
  core.BaseResponse base = 1;
  Topic topic = 2;
}

message InsertTopicRequest{
  core.BaseRequest base = 1 [(buf.validate.field).required = true];
  string title = 2;
  string description = 3;
  string slug = 6;

  string icon_url = 20;
  optional string banner_url = 21;
  optional string title_image_url = 22;
}


message UpdateTopicRequest{
  core.BaseRequest base = 1 [(buf.validate.field).required = true];
  int32 id = 2;
  optional string title = 3;
  optional string description = 4;
  optional string icon_url = 5;
  optional string banner_url = 6;
  optional string title_image_url = 7;
}
